fixed duplicate bug

--- a/MoodJounal.ipynb
+++ b/MoodJounal.ipynb
@@ -23,15 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "162\n",
-      "number of rows, columns:  (162, 2)\n"
+      "Text     47\n",
+      "Label    47\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -63,9 +64,10 @@
     "for con in arr:\n",
     "    caption = con['caption']\n",
     "    if len(caption) != 0:\n",
-    "        if caption.find('[') != -1 and caption.find(']') != -1:\n",
+    "        if caption.find('[') != -1 and caption.find(']') != -1 and con['taken_at'] not in time:\n",
     "            rank = caption[caption.index('[') + 1 : caption.index(']')]\n",
     "            description = caption[caption.index(']') + 1 : ]\n",
+    "            time.append(con['taken_at'])\n",
     "            # parsing mood label into integer\n",
     "            if '+' in rank:\n",
     "                mood.append(int(rank))\n",
@@ -75,9 +77,6 @@
     "                mood.append(int(rank))\n",
     "            else:\n",
     "                continue\n",
-    "            \n",
-    "            time.append(con['taken_at'])\n",
-    "            text.append(description)\n",
     "\n",
     "            # label as positive, zero, negative\n",
     "            rank = int(rank)\n",
@@ -88,16 +87,17 @@
     "            else:\n",
     "                rank = 0\n",
     "            data['Label'].append(int(rank))\n",
+    "            text.append(description)\n",
     "data['Text'] = text\n",
-    "print(len(text))\n",
     "df = pd.DataFrame(data)\n",
     "texts = df['Text'].astype(str)\n",
     "y = df['Label']\n",
-    "print(\"number of rows, columns: \",df.shape)\n",
     "\n",
+    "\n",
+    "# print(\"number of rows, columns: \",df.shape)\n",
     "pd.set_option('display.max_rows', None)\n",
     "#checking number of zeroes\n",
-    "# print(df)"
+    "print(df[df['Label']==0].count())\n"
    ]
   },
   {
